--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -9,10 +9,12 @@
   %>
   <% if @access_token %>
     <div>
-      <p>
-        <strong>token:</strong> <%= @access_token.token %><br>
-        <strong>secret:</strong> <%= @access_token.secret %><br>
-      </p>
+      <form id='tweetSubmit' action="/" method='post'>
+        <input type="hidden" name='user' value="<%=@user.id%>">
+        <label for="tweetText">Tweet something</label>
+        <input name='tweetText' type="text">
+      </form>
+      <img src="/original.gif" width="200">
       <p>
         <button><a href="/sign_out">Sign Out</a></button>
       </p>
